classDiagram

    namespace Salabim {

        class Store {
            +capacity: int
        }

    }

    namespace SimulationModel {

        class SimScenario {

        }
        class SimOrder {

        }
        class SimOrderJob {
            +number: int
        }
        class SimRobot {
            <<abstract>>
            +state: string
            +position: double
        }
        class SimRobotMain {

        }
        class SimRobotCorridorArm {

        }
        class SimMachine {
            +state: string
        }
        class SimTool {
            +life_time: int
        }
        class SimCorridor {

        }
        class SimCorridorArm {

        }
        class SimLayout {

        }

    }

    namespace ConfigurationModel {

        class Order {
            +quantity: int
        }
        class ProductType {

        }
        class ToolType {

        }
        class MachineType {

        }

    }

    SimScenario o-->"many" SimOrder
    SimOrder o-->"many" SimOrderJob

    Store ..>"many" SimOrderJob: stores

    SimLayout o-->"one" SimRobotMain
    SimLayout o-->"many" SimCorridor

    SimCorridor o-->"one" SimCorridorArm: left
    SimCorridor o-->"one" SimCorridorArm: right

    SimCorridorArm o-->"one" SimRobotCorridorArm
    SimCorridorArm o-->"many" SimMachine

    Store <.. SimRobot: pick from / place in

    SimRobotMain <|-- SimRobot
    SimRobotCorridorArm <|-- SimRobot
    
    SimRobot ..>"one" SimOrderJob: carries

    Store "one"<--o SimMachine: in
    Store "one"<--o SimMachine: out
    Store "one"<--o SimCorridor
    Store "one"<--o SimCorridorArm
    Store "one"<--o SimLayout: front
    Store "one"<--o SimLayout: back

    SimMachine ..>"one" SimOrderJob: processes
    SimMachine o-->"many" SimTool: contains
    SimMachine ..>"one" SimTool: mounts

    SimOrder ..>"one" Order
    SimOrderJob ..> ProductType: current
    SimOrderJob ..> ProductType: target

    SimTool ..>"one" ToolType

    SimMachine ..> MachineType


    style OperationType fill:lightgreen,stroke:green
    style ProductType fill:lightgreen,stroke:green
    style ToolType fill:lightgreen,stroke:green
    style MachineType fill:lightgreen,stroke:green

    style Scenario fill:pink,stroke:red
    style Order fill:pink,stroke:red

    style Layout fill:lightblue,stroke:blue
    style Corridor fill:lightblue,stroke:blue
    style Machine fill:lightblue,stroke:blue

    style SimScenario fill:orange,stroke:red
    style SimOrder fill:yellow,stroke:orange
    style SimOrderJob fill:yellow,stroke:orange
    style SimRobot fill:yellow,stroke:orange
    style SimRobotMain fill:yellow,stroke:orange
    style SimRobotCorridorArm fill:yellow,stroke:orange
    style SimMachine fill:yellow,stroke:orange
    style SimTool fill:yellow,stroke:orange
    style SimCorridor fill:yellow,stroke:orange
    style SimCorridorArm fill:yellow,stroke:orange
    style SimLayout fill:orange,stroke:red